test/Fail/Issue5034-3.agda
postulate
  _ : @lock Set → Set
