test/Fail/Issue5034-3.err
Issue5034-3.agda:2.7-12: error: [AttributeKindNotEnabled]
Lock attributes have not been enabled (use --guarded to enable
them): lock
